[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/entities.png" type="Texture" id=1]
[ext_resource path="res://Meteor/Meteor.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Meteor" type="Area2D" groups=[
"damageable",
"mobs",
]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="SpriteClosed" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 114, 14, 53, 43 )

[node name="SpriteOpen" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 29, 15, 58, 47 )

[node name="SpriteDead" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 193, 13, 74, 58 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 3, 3 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2.5, 2 )
shape = SubResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="area_entered" from="." to="." method="_on_Meteor_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
